# pfml_scripts

./: .env  .eslintignore  .eslintrc  .gitignore  .lintstagedrc.js  .prettierignore  404.html  README.md  SECURITY.md  contributing.html  creating-environments.html  deployment.html  index.html  mkdocs.yml  package-lock.json  package.json  pfml.code-workspace  sitemap.xml  tools.html
api/: .devcontainer.json  .dockerignore  .env.default  .env.dt2  .env.idt  .env.local  .gitignore  .spectral.yaml  Dockerfile  Makefile  README.md  address_report_generator.py  automated-tests.html  cognito.json  database-migrations.html  db-roles-and-users.html  development-environment-setup.html  docker-compose.override.yml  docker-compose.release.yml  docker-compose.yml  environment-variables.html  fields-and-validations.html  manage_db.py  monitoring.html  newrelic.ini  openapi.yaml  package-lock.json  package.json  pyproject.toml  running-the-application-docker.html  ses.html  setup.cfg  technical-overview.html  working-with-releases.html  writing-tests.html
api/archive-reference/: index.html
api/automated-tests/: index.html
api/config/: local.env
api/database-migrations/: index.html
api/db/: pfml_schema.sql
api/db-roles-and-users/: index.html
api/deployment/: index.html
api/development-environment-setup/: index.html
api/environment-variables/: index.html
api/fields-and-validations/: index.html
api/fineos_mock/: 2020-12-07-22-22-08-EmployeeDataLoad_feed.csv
api/import_infra/dor/: .gitignore  Makefile  README.md  get-lambda-build.py  get-lambda-dependencies.py  lambda-s3-package.json  local.json  template.yaml  test_event.json
api/lambdas/: .gitignore  Makefile.template  README.md
api/lambdas/cognito_post_confirmation/: Makefile  README.md  env.json  handler.py  template.yaml  test_event.json  test_forgot_password_event.json  test_leave_admin_event.json
api/lambdas/cognito_pre_signup/: Makefile  README.md  env.json  handler.py  requirements.txt  template.yaml  test_event.json
api/lambdas/dor/: .gitignore  Makefile  README.md  env.json  handler.py  template.yaml
api/lambdas/formstack_import/: Makefile  README.md  env.json  handler.py  requirements.txt  template.yaml
api/local/: bashrc  inputrc
api/local-integration-with-aws/: index.html
api/local_sftp/: ssh_api_rsa_key  ssh_api_rsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
api/massgov/pfml/: types.py
api/migrations/: env.py
api/migrations/versions/: 2020_04_13_20_23_27_2183ff9d3cd7_initial_schema.py  2020_04_15_13_08_01_6e88bb5e1055_adding_fks.py
api/mock/dor/: .gitignore  README.md  generate.py  requirements.txt
api/monitoring/: index.html
api/pacts/: claimant_portal-pfml_api.json
api/pdf_api/: Program.cs
api/pdf_api/Controllers/: PdfController.cs
api/pdf_api/Models/: CreatedDocumentDto.cs  DocumentDto.cs
api/pdf_api/Services/: PdfDocumentService.cs
api/pdf_api/Utilities/: AmazonS3Setting.cs
api/pfml/: .dockerignore  Dockerfile  README.md  api.py  openapi.yaml
api/running-the-application-docker/: index.html
api/security/: index.html
api/ses/: index.html
api/technical-overview/: index.html
api/tests/: conftest.py  factories.py  test_cognito_post_confirmation_lambda.py  test_cognito_pre_signup_lambda.py  test_cps_errors_crawler.py  test_mock_sftp_client.py  test_types.py
api/tests/api/: __init__.py  conftest.py  test_admin.py  test_applications.py  test_change_requests.py  test_claim_rules.py  test_claims.py  test_cors.py  test_dashboards.py  test_db_applications.py  test_documents.py  test_eligibility.py  test_employees.py  test_employees_get.py  test_employees_patch.py  test_employer_claim.py  test_employers.py  test_employers_get.py  test_example_contract.py  test_flags.py  test_generate_wagesandcontributions.py  test_holidays.py  test_managed_requirements.py  test_notifications.py  test_payment_preferences.py  test_payments.py  test_pdf_documents.py  test_rmv_check.py  test_rmv_endpoint.py  test_roles.py  test_status.py  test_tax_withholding_preferences.py  test_users.py  test_users_get.py  test_users_post.py  test_verifications.py  test_wages.py  test_wages_get.py
api/tests/bofa/: test_bofa_generate.py
api/tests/db/: conftest.py  test_config.py  test_create_api_user.py  test_db.py  test_db_applications.py  test_handle_error.py  test_lookup.py  test_lookups.py  test_migrations.py  test_stage_table.py  test_status.py
api/tests/delegated_payments/: conftest.py  test_address_validation.py  test_claimant_address_validation.py  test_convert_mmars_data_step.py  test_delegated_config.py  test_delegated_error_reports.py  test_delegated_fineos_1099_request_extract.py  test_delegated_fineos_claimant_extract.py  test_delegated_fineos_iaww_extract.py  test_delegated_fineos_payment_cancellation.py  test_delegated_fineos_payment_extract.py  test_delegated_fineos_pei_writeback.py  test_delegated_payments_check_issue_file.py  test_delegated_payments_e2e.py  test_delegated_payments_nacha.py  test_delegated_payments_util.py  test_deligated_fineos_related_payment_processing.py  test_ez_check.py  test_fineos_extract_step.py  test_fineos_import_iaww.py  test_is_employer_reimbursement_enabled.py  test_is_withholding_enabled.py  test_payment_methods_split_step.py  test_payment_post_processing_step.py  test_pickup_response_files_step.py  test_related_withholding_payment_post_processing_step.py  test_related_withholding_payment_processing_step.py  test_state_cleanup_step.py  test_step.py
api/tests/dua/: helpers.py  test_demographic_data.py  test_dua_send_employee_request_file.py  test_dua_send_employer_request_file.py  test_employer_data.py  test_employer_unit_data.py  test_gender_backfill.py
api/tests/duplicate_users/: duplicate_users_prod.txt  find_duplicate_email_info.sql  find_duplicate_user_info.sql  merge_duplicate_users.sql  merge_duplicate_users_prod.sql  test_duplicate_users_sql.py
api/tests/experian/: test_experian_util.py
api/tests/helpers/: certs.py  (+3 more)
api/working-with-releases/: index.html
api/writing-tests/: index.html
(+5973 files in other folders)
