[tool.poetry]
name = "massgov.pfml.api"
version = "0.1.0"
description = "Massachusetts Paid Family & Medical Leave API"
authors = ["Mass PFML API Team <ma-pfml-alerts@mass.gov>"]
packages = [
  { include = "massgov" },
]
include = ["openapi.yaml", "newrelic.ini"]

[tool.poetry.dependencies]
alembic = "^1.4.2"
boto3 = "^1.13.7"
boto3_extensions = "^0.14.1"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
cryptography = "^3.3.2"
csvsorter = "^1.4"
ebcdic = "^1.1.1"
factory_boy = "^2.12.0"
faker = "^4.2.0"
flask-bouncer = "^0.3.0"
flask_cors = "^3.0.9"
Flask-HTTPAuth = "^4.2.0"
gunicorn = "^20.0.4"
newrelic = "^5.14.1"
paramiko = "^2.7.2"
phonenumbers = "^8.12.13"
psycopg2-binary = "^2.8.5"
puremagic = "^1.10"
pydantic = "^1.5.1"
pydash = "^4.7.6"
pyodbc = {version = "^4.0.30", optional = true}
python = "^3.8"
python-dateutil = "^2.8.1"
python-gnupg = "^0.4.6"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
pyyaml = "^5.4.0"
requests = "^2.24.0"
requests-pkcs12 = "^1.7"
requests_oauthlib = "^1.3.0"
sentry-sdk = {extras = ["flask"], version = "^0.19.5"}
smart_open = "^2.0.0"
sqlalchemy = "^1.3.15"
strict-rfc3339 = "^0.7"
tenacity = "^6.2.0"
xmlschema = "^1.2.2"
zeep = "^3.4.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
click = "^7.1.2"
coverage = "^5.0.4"
datamodel-code-generator = "^0.5.13"
flake8 = "^3.7.9"
flake8-alfred = "^1.1.1"
flake8-bugbear = "^20.1.4"
freezegun = "^0.3.15"
isort = "^4.3.21"
moto = "^1.3.14"
mypy = "^0.770"
oyaml = "^1.0"
pyopenssl = "^19.1.0"
pytest = "^5.3.5"
pytest-httpserver = "^0.3.6"
pytest-mock = "^3.3.1"
pytest-testmon = "^1.0.2"
pytest-timeout = "^1.4.1"
pytest-watch = "^4.2.0"
safety = "^1.9.0"
sqlalchemy-stubs = {git = "https://github.com/dropbox/sqlalchemy-stubs", rev = "55470ceab8149db983411d5c094c9fe16343c58b"}

[tool.poetry.extras]
mssql-server = ["pyodbc"]

[tool.poetry.scripts]
massgov-pfml-api = "massgov.pfml.api.__main__:main"
db-migrate-up = "massgov.pfml.db.migrations.run:up"
db-migrate-down = "massgov.pfml.db.migrations.run:down"
db-migrate-down-all = "massgov.pfml.db.migrations.run:downall"
db-admin-create-db-users = "massgov.pfml.db.admin:create_users"
db-create-fineos-user = "massgov.pfml.db.create_api_user:create_fineos_user"
pub-payments-create-pub-files = "massgov.pfml.delegated_payments.process_pub_payments:main"
pub-payments-process-pub-returns = "massgov.pfml.delegated_payments.process_pub_responses:main"
execute-sql = "massgov.pfml.db.execute_sql:execute_sql"
register-leave-admins-with-fineos = "massgov.pfml.fineos.leave_admin_creation.register_leave_admins_with_fineos:main"
generate-verification-codes = "massgov.pfml.verification.generate_verification_codes:main"
dor-generate = "massgov.pfml.dor.mock.generate:main"
dor-import = "massgov.pfml.dor.importer.import_dor:handler"
generate-wagesandcontributions = "massgov.pfml.api.generate_wagesandcontributions:main"
load-employers-to-fineos = "massgov.pfml.fineos.employer_load:handler"
fineos-eligibility-feed-export = "massgov.pfml.fineos.eligibility_feed_export.eligibility_export:main"
bulk-user-import = "massgov.pfml.user_import.process_csv:process"
payments-ctr-process = "massgov.pfml.payments.process_ctr_payments:ctr_process"
payments-fineos-process = "massgov.pfml.payments.process_payments:fineos_process"
payments-mock-generate = "massgov.pfml.payments.mock.generate:main"
payments-rotate-data-mart-password = "massgov.pfml.payments.rotate_data_mart_password:main"
payments-manual-payment-voucher = "massgov.pfml.payments.manual.payment_voucher:main"
fineos-payments-mock-generate = "massgov.pfml.payments.mock.fineos_extract_generator:main"
fineos-test-vendor-export-generate = "massgov.pfml.payments.mock.fineos_extract_generator:create_test_vendor_export"
fineos-daily-generate = "massgov.pfml.fineos.mock.generate:main"
fineos-import-employee-updates = "massgov.pfml.fineos.import_fineos_updates:handler"
fineos-bucket-tool = "massgov.pfml.fineos.tool.bucket:main"
reductions-retrieve-payment-lists-from-agencies = "massgov.pfml.reductions.retrieve_payment_lists_from_agencies:main"
reductions-send-claimant-lists-to-agencies = "massgov.pfml.reductions.send_claimant_lists_to_agencies:main"
reductions-send-wage-replacement-payments-to-dfml = "massgov.pfml.send_wage_replacement_payments_to_dfml:main"
transmogrify-state-logs = "massgov.pfml.util.tasks.transmogrify_states:transmogrify_states"
delegated-payment-audit-rejects-generate = "massgov.pfml.delegated_payments.audit.mock.delegated_payment_audit_generator:generate_payment_rejects_file"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
